<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_full</name>
  <version>2.0.0</version>
  <description>ROSNEURO metapackage for full installation</description>
  <author email="luca.tonin@unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rosneuro_data</exec_depend>
  <exec_depend>rosneuro_msgs</exec_depend>
  <exec_depend>rosneuro_acquisition</exec_depend>
  <exec_depend>rosneuro_acquisition_eegdev</exec_depend>
  <exec_depend>rosneuro_acquisition_lsl</exec_depend>
  <exec_depend>rosneuro_recorder</exec_depend>
  <exec_depend>rosneuro_visualizer</exec_depend>
  <exec_depend>rosneuro_filters</exec_depend>
  <exec_depend>rosneuro_filters_dc</exec_depend>
  <exec_depend>rosneuro_filters_butterworth</exec_depend>
  <exec_depend>rosneuro_filters_car</exec_depend>
  <exec_depend>rosneuro_filters_laplacian</exec_depend>
  <exec_depend>rosneuro_filters_blackman</exec_depend>
  <exec_depend>rosneuro_filters_flattop</exec_depend>
  <exec_depend>rosneuro_filters_hamming</exec_depend>
  <exec_depend>rosneuro_filters_hann</exec_depend>
  <exec_depend>rosneuro_buffers</exec_depend>
  <exec_depend>rosneuro_buffers_ringbuffer</exec_depend>
  
  <export>
   <metapackage />
  </export>

  

</package>
